contextLoad() test